--- a/src/components/MusicPlayer.css
+++ b/src/components/MusicPlayer.css
@@ -1,43 +1,15 @@
-.heart-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 400px;
-    margin-top: 20px;
-    position: relative;
-  }
-  
-  
-  .heart::after {
-    top: 0;
-    left: 100px;
-  }
-  
-  .spotify-iframe {
-    position: absolute;
-    top: 30%;
-    left: 70%;
-    transform: translate(-50%, -50%) rotate(45deg);
-    width: 250px;
-    height: 170px;
-    border-radius: 10px;
-    border: none;
-    z-index: 3;
-  }
-  
-  .play-button {
-    margin-top: 50px;
-    background-color: #c8102e;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  .play-button:hover {
-    background-color: #a00c1e;
-  }
-  
+/* MusicPlayer.css */
+
+.music-player {
+  position: fixed; /* Coloca o reprodutor em uma posição fixa na tela */
+  bottom: 0; /* Alinha ao fundo da tela */
+  left: 0; /* Alinha à esquerda da tela */
+  width: 100%; /* Largura total para cobrir a tela */
+  background: rgba(0, 0, 0, 0.5); /* Fundo transparente para visualização */
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.music-player audio {
+  width: 100%; /* Ajusta a largura do reprodutor para o tamanho do contêiner */
+}
